# TUGAS_DESIOT

./: CMakeLists.txt  README.md
src/: ai.cpp  ai_2.cpp  detect.cpp  detect_hsv.cpp  itsef.cpp  onnx_test.cpp
